# leor

./: .gitignore  CMakeLists.txt  build.sh  license  readme.md
include/: input_stream.h  string_data.h  string_stream.h
include/helpers/: repr.h
include/lexer/: lexer.h  token.h
include/platform/: io.h
src/: input_stream.c  main.c  string_data.c  string_stream.c
src/helpers/: repr.c
src/lexer/: lexer.c  token.c
src/platform/: io.c
